@@ -98,7 +98,7 @@ public class CommentsService {
         return comments.stream()
                 .map(comment -> new CommentDTO(comment.getId(), comment.getMovie().getId(),
                         comment.getUser().getId(), mapper.map(comment.getUser(), UserObj.class),
-                        comment.getContent(), comment.getDate())).toList();
+                        comment.getContent(), comment.getDate())).collect(Collectors.toList());
     }
 
     public List<CommentDTO> getCommentsByMovieIdAndUserId(Long movieId, Long userId) {
@@ -116,6 +116,6 @@ public class CommentsService {
         return comments.stream()
                 .map(comment -> new CommentDTO(comment.getId(), comment.getMovie().getId(),
                         comment.getUser().getId(), mapper.map(comment.getUser(), UserObj.class),
-                        comment.getContent(), comment.getDate())).toList();
+                        comment.getContent(), comment.getDate())).collect(Collectors.toList());
     }
 }
